# mem-monitor

./: .clang-format  CMakeLists.txt  Makefile  README.md  main.c  manual.md  mem-info.c  mem-info.h  memlog.json  start_mem_monitor.sh  test.c  test.cpp
.github/workflows/: pipeline.yml
components/: CMakeLists.txt
components/common/: mem-monitor-config.h  test.h
components/common/config/: mem-monitor-config.h
components/common/mtc/: CMakeLists.txt  Cargo.toml  Makefile  build.rs
components/common/mtc/include/: memory-decoder.h  mtc-config.h  mtc-decoder.h  mtc-object.h  mtc-point.h  mtccdecoder.h  tmtcdecoder.h
components/common/mtc/src/: lib.rs  memory-decoder.cpp  mtc-decoder.cpp  mtc-object.cpp  mtccdecoder.c  mtcrustdecoder.rs  tmtcdecoder.c  tmtcrustdecoder.rs
components/common/mtc/tests/: CMakeLists.txt  Makefile  mtc-tests.cpp  test.c  test.rs  tmtc-stream-tests.cpp  tmtc-tests.cpp
components/common/testing/: test.h
components/horus-gui/: angular.json  package-lock.json  package.json
components/horus-gui/src-tauri/: Cargo.toml  tauri.conf.json
components/horus-gui/src-tauri/src/: main.rs
components/horus-gui/src/app/: app.component.css  app.component.html  app.component.ts
components/horus-gui/src/app/components/file-uploader/: file-uploader.component.ts
components/horus-gui/src/app/components/metrics-chart/: metrics-chart.component.ts
components/horus-gui/src/app/components/metrics-selector/: metrics-selector.component.ts
components/horus-gui/src/app/models/: metric.model.ts
components/horus-gui/src/app/services/: tauri.service.ts
components/memory-gui/: CMakeLists.txt  dev-setup.md
components/memory-gui/include/: animation-data-container.h  decoder-monitor.h  decoder-worker.h  mainwindow.h  mtc-config.h  plotdata.h  qcustomplot.h  qmemoryanimatecontrols.h  qmemoryplotter.h  qmemorytreemapplot.h  qmtcloader.h  qmtcloadersgroup.h  qplotcontrolsidebar.h  qplotrender.h  qtreememorywidgetitem.h
components/memory-gui/src/: decoder-monitor.cpp  decoder-worker.cpp  main.cpp  mainwindow.cpp  qcustomplot.cpp  qmemoryanimatecontrols.cpp  qmemoryplotter.cpp  qmemorytreemapplot.cpp  qmtcloader.cpp  qmtcloadersgroup.cpp  qplotcontrolsidebar.cpp  qplotrenderer.cpp  qtreememorywidgetitem.cpp
components/memory-gui/src/ui/: mainwindow.ui
components/memory-monitor/: CMakeLists.txt  Makefile
components/memory-monitor/include/: map-reader.h  mem-info.h  mem-reader.h  mem-threading.h  mem-writer.h  process-reader.h
components/memory-monitor/src/: main.c  map-reader.c  mem-info.c  mem-reader.c  mem-threading.c  mem-writer.c  process-reader.c
components/memory-monitor/tests/: CMakeLists.txt  test.c
components/memory-simulator/: CMakeLists.txt  Makefile
components/memory-simulator/src/: main.cpp  memory-simulator.cpp
components/memory-tracker/: CMakeLists.txt  Makefile
components/memory-tracker/src/: memory-tracker.cpp
components/memory-tracker/tests/: CMakeLists.txt  run_tracker_test.sh  tracker-test.cpp
memory-tracker/: CMakeLists.txt  Makefile  logger.c  memory-tracker.c  memory-tracker.cpp  test-output.py  tracker-test.c  tracker-test.cpp
scripts/: clean-all-artifacts.sh  gen-release-artifacts.sh  generate_code_coverage.sh  getleaksize.py  leakedaddresses.txt  rs_library_build.sh  run_clang_format.sh  setup-device.py  start_mem_monitor.sh  stat_reader.py  stop_mem_tracker.sh  tmtc-decoder.py  tmtcdecoder.py  uwb_test_debug_onerun_cropped.tmtc
scripts/decode-test/: decode-test.py
scripts/decoders/: address-scripts.py  addressspace.json  bbmpp-size-allocation-tracking.py  pure-tmtc-decoder.py  requirements-address.txt  tmtc-decoder-wrapper.py  tmtc-scripts.py  tmtc_decoder_wrapper.py  tmtc_meta.py
scripts/device-setup/: bbmpp_tracker_script.sh  rs_start_debug_script.sh  setup-device.py
source/: mem-info.c  mem-info.h  mem-reader.c  mem-reader.h  mem-threading.c  mem-threading.h  mem-writer.c  mem-writer.h  process-reader.c  process-reader.h
tests/: test.c  test.h
